Add LLM analysis and Discord chunking

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ DISCORD_WEBHOOK_URL=
 TIMEZONE=Europe/London
 WATCHLIST=AAPL,MSFT,AMZN,GOOGL,META,NVDA,TSLA,3067.HK,3690.HK
 NEWS_FEEDS=https://finance.yahoo.com/news/rssindex,https://www.reutersagency.com/feed/?best-topics=business-finance&post_type=best
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-5.2
